prevent crosshair from overlapping control panel

--- a/app/styles/10_cinema.sass
+++ b/app/styles/10_cinema.sass
@@ -57,6 +57,7 @@
   position: absolute
   background: rgba(255,0,0,0.5)
   z-index: 100
+  overflow: hidden
 #crosshair
   position: absolute
   z-index: 102
